# mini_dx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  mdx.cpp  mdx.h  mdx_app.cpp  mdx_app.h  mdx_exception.cpp  mdx_gfx.cpp  mdx_gfx.h  mdx_types.h  mdx_window.h  mini_dx.sln  mini_dx.vcxproj
lib/: CMakeLists.txt
src/: CMakeLists.txt  exception.cpp  exception.h  gfx.cpp  mdx_window.cpp  mini_dx.vcxproj.filters
src/mdx/: CMakeLists.txt  app.cpp  app.h  core.h  exception.cpp  gfx.cpp  gfx.h  platform.h  timer.h  window.cpp  window.h
